@@ -1,3 +1,4 @@
+	* separate anonymous mode and force-proxy mode, and tighten it up a bit
 	* add per-tracker scrape information to announce_entry
 	* report errors in read_piece_alert
 	* DHT memory optimization
